Fixed spacing in university view.

--- a/src/ututi/public/style.css
+++ b/src/ututi/public/style.css
@@ -3557,7 +3557,7 @@ input.text_button:hover {
 
 /* university list */
 #university-list {
-    margin-top: 30px;
+    margin-top: 10px;
     overflow: hidden;
 }
 
